@@ -45,6 +45,8 @@ Changes from 4.3.x -> 4.4-alpha
   given EIDRM (bfq channel went away)
 * xymond_rrd: Load hostnames and configuration earlier in the startup process
 * xymonnet: keep the services db open during entire run
+* xymond_history: rewrite file write section using posix instead of C
+
 
 Changes from 4.3.22 -> 4.3.23 (12 Nov 2015)
 ===========================================
